--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,6 +1,7 @@
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/bookshop?characterEncoding=UTF-8
+jdbc.url=jdbc:mysql://localhost:3306/bookshop
 jdbc.username=root
 jdbc.password=123456
+
 
 
